# MCUXToVisualStudio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Rt1060Startup.c  board.h  evkmimxrt1060_azure_iot_mqtt_Debug.ld  evkmimxrt1060_azure_iot_mqtt_Debug_library.ld  evkmimxrt1060_azure_iot_mqtt_Debug_memory.ld  fsl_flexspi_nor_boot.h  script.jlink  startup_mimxrt1064.c
board/: board.h  clock_config.c  pin_mux.c  pin_mux.h
device/: MIMXRT1062.h
source/: Rt1060Startup.c  Rt1060Startup.h
utilities/: fsl_str.c
xip/: evkmimxrt1064_flexspi_nor_config.h
